--- a/composer.json
+++ b/composer.json
@@ -59,11 +59,11 @@
             "@php artisan key:generate --ansi"
         ],
         "post-install-cmd": [
-            "php artisan clear-compiled",
-            "php artisan optimize",
-            "chmod -R 777 storage",
-            "php artisan passport:install",
-            "php artisan passport:keys"
+            "@php artisan clear-compiled",
+            "@php artisan optimize",
+            "@chmod -R 777 storage",
+            "@php artisan passport:install",
+            "@php artisan passport:keys"
         ],
     }
 }
