--- a/composer.json
+++ b/composer.json
@@ -56,11 +56,7 @@
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
-        ],
-        "post-install-cmd": [
-            "@php artisan clear-compiled",
-            "@php artisan optimize",
+            "@php artisan key:generate --ansi",
             "@chmod -R 777 storage",
             "@php artisan passport:install",
             "@php artisan passport:keys"
