--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,10 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-install-cmd": [
+            "chmod -R 777 storage",
+            "@php artisan passport:keys"
         ]
     }
 }
