--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,7 @@
             "@php artisan key:generate --ansi"
         ],
         "post-install-cmd": [
+            "chmod -R 777 public",
             "chmod -R 777 storage",
             "@php artisan passport:keys"
         ]
